--- a/presentación.html
+++ b/presentación.html
@@ -12,7 +12,7 @@
     }
   </style>   
     <h1>Marcos Emiliano Corporan</h1>
-    <img src="https://c4.wallpaperflare.com/wallpaper/825/951/798/blasphemous-latin-video-games-video-game-art-hd-wallpaper-thumb.jpg" width="200">
+    <img src="tareadianel.jpg" width="200">
     <p><h2>cosas que me gustan</h2></p>
     <p><h3>Artes marciales</h3></p>
     <p><h3>Musica</h3></p>
