--- a/presentación.html
+++ b/presentación.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+ <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style role="stylesheet" href="./style.css" type="text/css"></style>
     <title>Presentación</title>
-</head>
+    </head>
 <body>
- <style>
-    body {
-      background-color: rgb(255, 0, 242);
-    }
-  </style>   
     <h1>Marcos Emiliano Corporan</h1>
-    <img src="tareadianel.jpg" width="200">
+    <img src="tareadianel.jpg" alt="imagen bien cool" width="200">
     <p><h2>cosas que me gustan</h2></p>
-    <p><h3>Artes marciales</h3></p>
-    <p><h3>Musica</h3></p>
-    <p><h3>Juegos</h3></p>
-    <p><h3>cocinar</h3></p>
+    <ol>
+      <li>Artes Marciales</li>
+      <li>Musica</li>
+      <li>juegos</li>
+      <li>Cocinar</li>
+    </ol>
     <p><h2>Cosas que no me gustan</h2></p>
-<p><h3>vivir</h3></p>
+<ol>
+  <li>Vivir</li>
+</ol>
 </body>
-</html>
+</html> 
