--- a/presentación.html
+++ b/presentación.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <h1>Marcos Emiliano Corporan</h1>
-    <img src="tareadianel.jpg" alt="imagen bien cool" width="200">
+    <img href="tareadianel.jpg" alt="imagen bien cool" width="200">
     <p><h2>cosas que me gustan</h2></p>
     <ol>
       <li>Artes Marciales</li>
