--- a/presentación.html
+++ b/presentación.html
@@ -3,12 +3,12 @@
 <head>
  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style role="stylesheet" href="./style.css" type="text/css"></style>
+    <link rel="stylesheet" href="./style.css" type="text/css"></link>
     <title>Presentación</title>
     </head>
 <body>
     <h1>Marcos Emiliano Corporan</h1>
-    <img href="tareadianel.jpg" alt="imagen bien cool" width="200">
+    <img src="tareadianel.jpg" alt="imagen bien cool" width="200">
     <p><h2>cosas que me gustan</h2></p>
     <ol>
       <li>Artes Marciales</li>
